# simple-vla

./: .gitignore  PLAN.md  README.md  env.py  main.ipynb  part1.ipynb  part1_simulator.py  part1_vision.py  part2.ipynb  part2_simulator.py  part2_vision.py  part3_bc.py  part4_transformer.py  part4_transformer_dit.py  part5_flow.py  part5_flow_dit.py  part6_vla.py  part6_vla_connector.py  pyproject.toml  sample.ipynb  say_hello.py  utils.py
ref/: genesis_env.py  make_sim_dataset.py  normal.py
textures/: readme.md
