[project]
name = "simple-vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "genesis-world>=1.0.0",
    "ipykernel>=7.2.0",
    "lerobot>=0.4.4",
    "accelerate>=1.6.0",
    "pillow>=10.0.0",
    "torch",
    "torchvision",
    "transformers>=4.57.0",
]


[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
